expr/Expr.g4
grammar Expr;
import CommonLexerRules;
/** The start rule; begin parsing here. */
prog: stat+;

stat: expr NEWLINE | ID '=' expr NEWLINE | NEWLINE;

expr:
	expr ('*' | '/') expr
	| expr ('+' | '-') expr
	| INT
	| ID
	| '(' expr ')';
